--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,6 @@ body {
   left: 60px;
 }
 
-.rvwButt:hover {
-  background-color: white;
-  color: black;
-  cursor: url('./pointer2.png'), auto;
-}
 
 .profButt {
   background-color: black;
@@ -87,11 +82,6 @@ body {
   left: 450px; 
 }
 
-.profButt:hover {
-  background-color: white;
-  color: black;
-  cursor: url('./pointer2.png'), auto;
-}
 
 .welcome {
   background-color: #D9D9D9;
@@ -114,10 +104,28 @@ body {
 }
 
 .rev {
-  background-color: #8C52FF;
+  background-color: #4d11b4;
+  color: rgb(64, 252, 73);
   width: 95%;
   padding: 5px;
   margin: 5px;
   display: flex;
+  justify-content: space-between;
   height: 100px;
+}
+
+.revButts button {
+background-color: black;
+color: white;
+border-radius: 10px;
+margin-top: 75px;
+margin-left: 5px;
+
+}
+
+
+button:hover {
+  cursor: url('./pointer2.png'), auto;
+  background-color: white;
+  color: black;
 }
