--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ body {
 .welcome {
   background-color: #D9D9D9;
   border-radius: 30px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   border-width: thick;
   padding: 10px;
@@ -104,14 +104,16 @@ body {
 }
 
 .rev {
-  background-color: #4d11b4;
-  color: rgb(64, 252, 73);
+  background-color: #6d18ed;
+  color: rgb(63, 231, 236);
   width: 95%;
   padding: 5px;
   margin: 5px;
   display: flex;
   justify-content: space-between;
   height: 100px;
+  font-weight: bold;
+  font-size: large;
 }
 
 .revButts button {
